Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 
 html {
-    background: url('images/christmas_decor_background.jpg') top center no-repeat;
-    -webkit-background-size: cover;
+    background: url('images/wood_background.jpg');
+    /* -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
-    height: 100%;
-    background-clip: padding-box;
+    background-size: cover; 
+    background-clip: content-box; */
+    width : auto;
+    height: auto;
 }
 
 
